--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,6 @@
        <p><a href="samples/asset-list-1">Asset List 1</a></p>  
        <p><a href="samples/asset-list-2/">Asset List 2</a></p>
        <p><a href="samples/sample-vast-1/">Sample VAST Parsing 1</a></p>
+       <p><a href="samples/sample-api-1/">Sample API 1</a></p>
     </div> 
 </body>
