--- a/public/samples/asset-list-2/index.html
+++ b/public/samples/asset-list-2/index.html
@@ -1,6 +1,13 @@
 <head>
   <title>Asset List 2</title>
   <script src="../../hls.js/hls.js"></script>
+  <style>
+    video {
+      height: 300px;
+      width: 533px;
+      background-color: black;
+    }
+  </style>
 </head>
 
 <body>
