Address discussed improvements

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
        <p><a href="samples/asset-list-1">Asset List 1</a></p>  
        <p><a href="samples/asset-list-2/">Asset List 2</a></p>
        <p><a href="samples/sample-vast-1/">Sample VAST Parsing 1</a></p>
-       <p><a href="samples/sample-api-1/">Sample API 1</a></p>
+       <p><a href="samples/sample-api-jwt/">Sample API JWT</a></p>
+       <p><a href="samples/sample-api-vasturl/">Sample API VAST URL</a></p>
+       <p><a href="samples/sample-api-vastid/">Sample API VAST ID</a></p>
     </div> 
 </body>
