--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,7 @@
        <p><a href="samples/sample-api-jwt/">Sample API JWT</a></p>
        <p><a href="samples/sample-api-vasturl/">Sample API VAST URL</a></p>
        <p><a href="samples/sample-api-vastid/">Sample API VAST ID</a></p>
+       <p><a href="samples/sample-ad-signaling/">Sample VAST with Tracking Events to Ad Creative Signaling</a></p>
+       
     </div> 
 </body>
