listmpd: added duration. samples: added dash.js sample

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
        <p><a href="samples/sample-api-vasturl/">Sample API VAST URL</a></p>
        <p><a href="samples/sample-api-vastid/">Sample API VAST ID</a></p>
        <p><a href="samples/sample-ad-signaling/">Sample VAST with Tracking Events to Ad Creative Signaling</a></p>
-       
+       <p><a href="samples/dash-alt-mpd/">dash.js + AlterantiveMPD + ListMPD</a></p>
+
     </div> 
 </body>
