--- a/public/samples/asset-list-1/index.html
+++ b/public/samples/asset-list-1/index.html
@@ -7,87 +7,160 @@
       width: 533px;
       background-color: black;
     }
+
+    .video-container {
+      display: flex;
+      justify-content: center;
+    }
+
+    header {
+      padding: 1rem;
+      background-color: white;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .header-container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      align-items: center;
+    }
+
+    .project-name {
+      color: #63ba93;
+      text-align: center;
+    }
+
+    body {
+      margin: 0;
+      font-family: ui-sans-serif, -apple-system, system-ui, Segoe UI, Helvetica,
+        Arial, sans-serif;
+    }
+
+    #logo {
+      margin-right: auto;
+    }
+
+    .samples {
+      max-width: 640px;
+      margin: 0 auto;
+      padding: 1rem;
+    }
+
+    .samples a {
+      color: black;
+      font-weight: 500;
+    }
+
+    .samples a:hover {
+      color: #36b4a7;
+      transition: ease-in-out 250ms;
+    }
+
+    .samples h1 {
+      color: #36b4a7;
+    }
+
+    ul li:not(:last-child) {
+      margin-bottom: 10px;
+    }
   </style>
 </head>
 
 <body>
-  <h1>Asset List 1</h1>
-  <p>HLS, interstitial@5sec, 1 ad</p>
+  <header>
+    <div class="header-container">
+      <a href="/">
+        <img
+          src="/logo.svg"
+          alt="Company Logo"
+          width="150"
+          height="50"
+          id="logo"
+        />
+      </a>
+      <h1 class="project-name">VAST-2-SGAI</h1>
+    </div>
+  </header>
+  <div class="samples">
+    <h1>Asset List 1</h1>
+    <p>HLS, interstitial@5sec, 1 ad</p>
 
-  <video id="video" controls></video>
+    <div class="video-container">
+      <video id="video" controls></video>
+    </div>
+  </div>
 
   <script>
     if (Hls.isSupported()) {
-      var video = document.getElementById('video');
+      var video = document.getElementById("video");
       var hls = new Hls({
         enableInterstitialPlayback: true,
         interstitialAppendInPlace: true,
-        interstitialLiveLookAhead: 20
+        interstitialLiveLookAhead: 20,
       });
 
       hls.on(Hls.Events.MEDIA_ATTACHED, function () {
-        console.log('video and hls.js are now bound together !');
+        console.log("video and hls.js are now bound together !");
       });
 
       hls.on(Hls.Events.MANIFEST_PARSED, function (event, data) {
         console.log(
-          'manifest loaded, found ' + data.levels.length + ' quality level',
+          "manifest loaded, found " + data.levels.length + " quality level"
         );
       });
 
       hls.on(Hls.Events.INTERSTITIALS_UPDATED, (event, data) => {
-        console.log('INTERSTITIALS_UPDATED', data);
+        console.log("INTERSTITIALS_UPDATED", data);
       });
 
       hls.on(Hls.Events.INTERSTITIALS_BUFFERED_TO_BOUNDARY, (event, data) => {
-        console.log('INTERSTITIALS_BUFFERED_TO_BOUNDARY', data);
-        console.log("hls interstitialsManager", hls.interstitialsManager)
+        console.log("INTERSTITIALS_BUFFERED_TO_BOUNDARY", data);
+        console.log("hls interstitialsManager", hls.interstitialsManager);
       });
 
       hls.on(Hls.Events.ASSET_LIST_LOADING, (event, data) => {
-        console.log('ASSET_LIST_LOADING', data);
+        console.log("ASSET_LIST_LOADING", data);
       });
 
       hls.on(Hls.Events.ERROR, (event, data) => {
-        console.log('ERROR', data);
+        console.log("ERROR", data);
       });
 
       hls.on(Hls.Events.INTERSTITIAL_ASSET_PLAYER_CREATED, (event, data) => {
-        console.log('INTERSTITIAL_ASSET_PLAYER_CREATED', data);
+        console.log("INTERSTITIAL_ASSET_PLAYER_CREATED", data);
       });
 
       hls.on(Hls.Events.ASSET_LIST_LOADED, (event, data) => {
-        console.log('ASSET_LIST_LOADED', data);
+        console.log("ASSET_LIST_LOADED", data);
       });
-      
+
       hls.on(Hls.Events.INTERSTITIAL_STARTED, (event, data) => {
-        console.log('INTERSTITIAL_STARTED', data);
+        console.log("INTERSTITIAL_STARTED", data);
       });
 
       hls.on(Hls.Events.INTERSTITIAL_ENDED, (event, data) => {
-        console.log('INTERSTITIAL_ENDED', data);
+        console.log("INTERSTITIAL_ENDED", data);
       });
 
       hls.on(Hls.Events.INTERSTITIAL_ASSET_STARTED, (event, data) => {
-        console.log('INTERSTITIAL_ASSET_STARTED', data);
+        console.log("INTERSTITIAL_ASSET_STARTED", data);
       });
 
       hls.on(Hls.Events.INTERSTITIAL_ASSET_ENDED, (event, data) => {
-        console.log('INTERSTITIAL_ASSET_ENDED', data);
+        console.log("INTERSTITIAL_ASSET_ENDED", data);
       });
 
       hls.on(Hls.Events.INTERSTITIALS_PRIMARY_RESUMED, (event, data) => {
-        console.log('INTERSTITIALS_PRIMARY_RESUMED', data);
+        console.log("INTERSTITIALS_PRIMARY_RESUMED", data);
       });
 
       hls.on(Hls.Events.INTERSTITIAL_ASSET_ERROR, (event, data) => {
-        console.log('INTERSTITIAL_ASSET_ERROR', data);
+        console.log("INTERSTITIAL_ASSET_ERROR", data);
       });
 
-      hls.loadSource('main.m3u8?user=1234&content=abc');
+      hls.loadSource("main.m3u8?user=1234&content=abc");
 
       hls.attachMedia(video);
-
     }
   </script>
 </body>
