Add clickThrough tracking event with sample

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
        <p><a href="samples/sample-api-vasturl/">Sample API VAST URL</a></p>
        <p><a href="samples/sample-api-vastid/">Sample API VAST ID</a></p>
        <p><a href="samples/sample-ad-signaling/">Sample VAST with Tracking Events to Ad Creative Signaling</a></p>
-       <p><a href="samples/sample-ad-click/">Sample VAST with Ad Clicktrough Tracking</a></p>
+       <p><a href="samples/sample-ad-click/">Sample VAST with Ad Clickthrough Tracking</a></p>
 
     </div> 
 </body>
