Add try your own vast sample

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,9 @@
       <li>
         <a href="samples/dash-alt-mpd/">dash.js + AlterantiveMPD + ListMPD</a>
       </li>
-
+      <li>
+        <a href="samples/sample-edit-vast/">Try your own VAST file!</a>
+      </li>
     </ul>
   </div>
 </body>
