added 4 example live streams

--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,18 @@
         <a href="samples/sample-api-vastid/">Sample API VAST ID</a>
       </li>
       <li>
+        <a href="samples/sample-api-vastid-live/">Sample API VAST ID (LIVE w/BBB)</a>
+      </li>
+      <li>
+        <a href="samples/sample-api-vastid-live2/">Sample API VAST ID (LIVE w/WebRTC)</a>
+      </li>
+      <li>
+        <a href="samples/sample-api-vastid-live3/">Sample API VAST ID (LIVE w/IP Camera)</a>
+      </li>
+      <li>
+        <a href="samples/sample-api-vastid-live4/">Sample API VAST ID (LIVE w/RTMP)</a>
+      </li>
+      <li>
         <a href="samples/sample-ad-signaling/"
           >Sample VAST with Tracking Events to Ad Creative Signaling</a
         >
