fix a href sample

--- a/public/samples/dash-alt-mpd/index.html
+++ b/public/samples/dash-alt-mpd/index.html
@@ -90,7 +90,7 @@
     <p>
       API Call:
       <a
-        href="api/list-mpd?vasturl=http://localhost:3000/samples/dash-alt-mpd/vast-sample.xml"
+        href="/api/list-mpd?vasturl=http://localhost:3000/samples/dash-alt-mpd/vast-sample.xml"
         >try out</a
       >
     </p>
