--- a/public/samples/sample-api-vastid-live4/index.html
+++ b/public/samples/sample-api-vastid-live4/index.html
@@ -1,6 +1,8 @@
 <head>
   <title>Sample API 1</title>
   <script src="../../hls.js/hls.js"></script>
+  <script src="../wse_api.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  
   <style>
     video {
       height: 300px;
@@ -82,23 +84,27 @@
     </div>
   </header>
   <div class="samples">
-    <h1>Sample API VASTID</h1>
+    <img src="/wse.png" height=40 style="vertical-align:middle" />
+    <h1 style="display:inline;vertical-align:middle">Sample API VASTID (LIVE w/rtmp)</h1>
     <p>
-      HLS, interstitial@5sec, 1 ad parsed form
+      HLS, live, 1 ad parsed form
       <a href="vast-sample.xml">this Google IMA VAST example</a>
     </p>
     <p>
-      <b>Source: </b>rtmp <pre>ffmpeg -stats -re -f lavfi -i testsrc=size=1280x720,format=yuv420p -f lavfi -i anullsrc -c:v libx264 -g 50 -c:a aac -f flv rtmp://demo.entrypoint.cloud.wowza.com/rtmp/mystream</pre>
+      <b>Source: </b>rtmp <pre>ffmpeg -stats -re -f lavfi -i testsrc=size=1280x720,format=yuv420p -f lavfi -i anullsrc -vf "drawtext=fontsize=120:fontcolor=black:text='%{gmtime\:%T}':x=24:y=24,drawtext=fontsize=120:fontcolor=white:text='%{gmtime\:%T}':x=20:y=20"  -c:v libx264 -g 50 -c:a aac -f flv rtmp://demo.entrypoint.cloud.wowza.com/rtmp/mystream</pre>
     </p>
     <p style="display:inline">
       <b>Insert: </b><pre style="display:inline">curl https://demo.entrypoint.cloud.wowza.com/v1/ads/applications/rtmp/streams/mystream</pre>
+      <button onclick="sendGetRequest('rtmp','mystream')">Insert Ad</button>
+      <button onclick="sendDeleteRequest('rtmp','mystream')">Remove Ad</button>
+      <br><pre id="response">...</pre>
     </p>
     <div class="video-container">
       <video id="video" controls></video>
     </div>
   </div>
-
   <script>
+
     if (Hls.isSupported()) {
       var video = document.getElementById("video");
       var hls = new Hls({
