--- a/public/samples/sample-api-vastid-live2/index.html
+++ b/public/samples/sample-api-vastid-live2/index.html
@@ -100,6 +100,7 @@
       <button onclick="sendDeleteRequest('webrtc','mystream')">Remove Ad</button>
       <br><pre id="response">...</pre>
     </p>
+    <span><b>Current Time: </b><pre id="time" style="display:inline"></pre></span><br><br>
     <div class="video-container">
       <video id="video" controls></video>
     </div>
