--- a/public/samples/sample-edit-vast/index.html
+++ b/public/samples/sample-edit-vast/index.html
@@ -172,7 +172,7 @@
         <small>(The provided VAST file MUST have at least one m3u8 media file.)</small>
       </label>
       <input id="vast-url-input" type="text" placeholder="Enter VAST URL"
-        value="http://localhost:3000/samples/sample-vast-1/vast-sample.xml" />
+        value="https://vast2sgai.qualabs.com/samples/sample-vast-1/vast-sample.xml" />
       <button id="load-video">Load Video</button>
     </div>
     <div id="player-container" class="box video-container">
