--- a/public/samples/sample-api-vastid-live/index.html
+++ b/public/samples/sample-api-vastid-live/index.html
@@ -1,9 +1,9 @@
 <head>
   <title>Sample API VASTID (LIVE)</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="../../hls.js/hls.js"></script>
   <script src="../wse_api.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <style>
+<style>
     video {
       height: 300px;
       width: 533px;
@@ -99,7 +99,8 @@
       <button onclick="sendDeleteRequest('bbb','mystream')">Remove Ad</button>
       <br><pre id="response">...</pre>
     </p>
-    <span><b>Current Time: </b><pre id="time" style="display:inline"></pre></span><br><br>
+    <span><b>Current Time: </b><pre id="time" style="display:inline"></pre></span><br>
+    <span><b>Program Date Time: </b><pre id="program-date-time" style="display:inline">None</pre></span><br><br>
     <div class="video-container">
       <video id="video" controls></video>
     </div>
@@ -176,6 +177,7 @@
       hls.loadSource("http://demo.entrypoint.cloud.wowza.com/bbb/mystream/chunklist_w225987628.m3u8?user=1234&content=abc");
 
       hls.attachMedia(video);
+      startTime()
     }
   </script>
 </body>
