fix: chagne http to https to solve mixed content issue

--- a/public/samples/sample-api-vastid-live/index.html
+++ b/public/samples/sample-api-vastid-live/index.html
@@ -174,7 +174,7 @@
         console.log("INTERSTITIAL_ASSET_ERROR", data);
       });
 
-      hls.loadSource("http://demo.entrypoint.cloud.wowza.com/bbb/mystream/chunklist_w225987628.m3u8?user=1234&content=abc");
+      hls.loadSource("https://demo.entrypoint.cloud.wowza.com/bbb/mystream/chunklist_w225987628.m3u8?user=1234&content=abc");
 
       hls.attachMedia(video);
       startTime()
