UI cleanup/changes hack to show some interstitial data in the UI

--- a/public/samples/sample-api-vastid-live2/index.html
+++ b/public/samples/sample-api-vastid-live2/index.html
@@ -94,14 +94,14 @@
       <b>Source: </b>
       <a href="https://www.wowza.com/developer/webrtc/dev-view-publish?sdpURL=wss%3A%2F%2Fdemo.entrypoint.cloud.wowza.com%2Fwebrtc-session.json&applicationName=webrtc&streamName=mystream&audioBitrate=64&audioCodec=opus&videoBitrate=3500&videoCodec=42e01f&videoFrameRate=30&frameSize=default" target="webrtc">WebRTC Publish Page</a>
     </p>
-    <p style="display:inline">
-      <b>Insert: </b><pre style="display:inline">curl https://demo.entrypoint.cloud.wowza.com/v1/ads/applications/webrtc/streams/mystream</pre>
+    <span style="display:inline">
       <button onclick="sendGetRequest('webrtc','mystream')">Insert Ad</button>
       <button onclick="sendDeleteRequest('webrtc','mystream')">Remove Ad</button>
-      <br><pre id="response">...</pre>
-    </p>
+    </span><br>
+    <span><b>API Event: </b><pre id="response" style="display:inline">...</pre></span><br>
     <span><b>Current Time: </b><pre id="time" style="display:inline"></pre></span><br>
-    <span><b>Program Date Time: </b><pre id="program-date-time" style="display:inline">None</pre></span><br><br>
+    <span><b>Program Date Time: </b><pre id="program-date-time" style="display:inline">...</pre></span><br>
+    <span><b>Interstitial: </b><pre id="interstitial" style="display:inline">...</pre></span><br><br>    
     <div class="video-container">
       <video id="video" controls></video>
     </div>
@@ -128,6 +128,9 @@
 
       hls.on(Hls.Events.INTERSTITIALS_UPDATED, (event, data) => {
         console.log("INTERSTITIALS_UPDATED", data);
+        if(data.removedIds.length >= 1 ) {
+          $("#interstitial").text("...");
+        }
       });
 
       hls.on(Hls.Events.INTERSTITIALS_BUFFERED_TO_BOUNDARY, (event, data) => {
@@ -145,6 +148,7 @@
 
       hls.on(Hls.Events.INTERSTITIAL_ASSET_PLAYER_CREATED, (event, data) => {
         console.log("INTERSTITIAL_ASSET_PLAYER_CREATED", data);
+        $("#interstitial").text(data.asset.parentIdentifier + " @" + data.event.dateRange._startDate);
       });
 
       hls.on(Hls.Events.ASSET_LIST_LOADED, (event, data) => {
@@ -177,7 +181,7 @@
 
       hls.loadSource("https://demo.entrypoint.cloud.wowza.com/webrtc/mystream/playlist.m3u8?user=1234&content=abc");
       hls.attachMedia(video);
-      startTime()
+      startTime();
     }
   </script>
 </body>
